--- a/src/components/common/Nav/styles.scss
+++ b/src/components/common/Nav/styles.scss
@@ -8,7 +8,7 @@
 	&.isScrolling {
 		// backdrop-filter: blur(10px);
 		background-color: var(--primary-color);
-
+		border-bottom: 1px solid var(--quertiary-color);
 		.nav {
 			padding: 10px 0;
 		}
