--- a/src/components/sections/Home/styles.scss
+++ b/src/components/sections/Home/styles.scss
@@ -54,7 +54,7 @@
 				z-index: 1;
 
 				&.img-profile {
-					// filter: grayscale(1);
+					filter: grayscale(1);
 				}
 			}
 		}
