--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,19 +7,20 @@ body {
 	color: var(--primary-text-color);
 	font-size: 16px;
 	background-color: var(--primary-color);
-	position: relative;
 }
 
 body {
+	position: relative;
+	width: 100%;
 	overflow-x: hidden;
 }
 
 .app-wrapper {
 	position: relative;
-	min-height: 100vh;
 }
 
 .section {
+	position: relative;
 	min-height: 1px;
 	width: 100%;
 	margin-bottom: 100px;
